--- a/src/public/css/inststyle.css
+++ b/src/public/css/inststyle.css
@@ -2,6 +2,10 @@
 .comment{
   padding-left: 25%;
 }
+.comment_area{
+  width: 100%;
+
+}
 .form_area{
   padding-left: 30%;
   padding-right: 30%;
@@ -11,7 +15,9 @@
   padding-top: 100px;
 }
 
+
 .site {
+  z-index: 9999;
   position: fixed;
   width: 100%;
 }
@@ -26,7 +32,11 @@
 .photo{
   text-align: center;
 }
-
+/*
+.photo_frame{
+  display:flex;
+}
+*/
 .editor{
   padding-left: 25%;
 }
@@ -55,14 +65,12 @@
   justify-content: center;
 }
 .pro_avatar{
-  padding-left: 5%;
-  width : 10% ;
-  height: 10% ;
-}
 
+}
+/*
 .pro_photo{
   width : 30% ;
-  height: 400px;
+  height: 20%;
   padding-bottom: 0.5%;
   object-fit: cover;
 }
@@ -70,18 +78,66 @@
 .pro_photos{
   padding-left: 5%;
   padding-right: 5%;
+}
+*/
+.pro_photos{
+  display: flex;
+  display:-webkit-flex;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
 
 }
+
+.photo_frame{
+  position: relative;
+  width: 31%;
+  height: auto;
+  margin: 1%;
+  overflow: hidden;
+}
+
+.photo_frame:before {
+  content: "";
+  display: block;
+  padding-top: 100%
+}
+
+.inner_photo{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.inner_photo img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: 100%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
+}
+
+.profiles {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.pro_avatar{
+  width: 20%;
+}
 .pro_name{
-  text-align: center;
-  padding-left: 35%;
-  padding-bottom: 3%;
+  flex-grow: 3;
   font-size: 200%;
+  
 }
 
 .num{
-  text-align: right;
-  padding-left: 15%;
+
   font-size: 200%;
 }
 
@@ -131,5 +187,6 @@
 
 .col{
   width: 100%;
-  font-size: 150%;
+  font-size: 120%;
+  padding-top: 0.5%;
 }
